feat: add gateway private api facade
